# stat-390-project

./: .gitignore  AGENTS.md  README.md  model.py  prepare.py  program.md  pyproject.toml  results.tsv  skills-lock.json
.agents/skills/markdown-mermaid-writing/: SKILL.md
.agents/skills/scientific-visualization/: SKILL.md
manual/: README.md  analysis.ipynb  baseline.py  baseline_autoencoder.py  initial_exploration.ipynb  new_baseline.py  preprocess.py  test_notebook.ipynb
results/: 2_run_results_fail.tsv  3_run_results.tsv  README.md  agent_experiment_notes.md  first_run_results.tsv  results.tsv  second_run_results.tsv  skilled_agent_experiment_notes.md
results/old/: 1_run_results.tsv  2_run_results.tsv  4_run_results.tsv  manual_test_results.tsv
